--- a/styles/box-model-style.css
+++ b/styles/box-model-style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
 
 :root {
@@ -13,51 +12,109 @@
 	--border-color: #eccd8f;
 }
 
-* {
-	padding: 0;
-	margin: 0;
-	border: 1px solid var(--border-color);
-}
-
 .main-container {
-	font-family: 'Maven Pro', sans-serif;
-	color: var(--text-color);
-	background-color: var(--body-color);
-	font-size: 0.9em;
-	letter-spacing: 1px;
+	font-family: 'Poiret One', cursive;
+	color: var(--header-text-color);
 }
 
-small {
-	display: block;
-	padding: 20px;
+/* colors */
+
+.pale {
+	color: var(--header-text-color);
 }
 
-.table-box-model {
-	margin: 30px auto;
-	padding: 100px;
+.petrol {
+	color: var(--header-container-color);
 }
 
-/* .th-pad {
-	padding: 20px 100px;
+.light-petrol {
+	color: var(--header-element-color);
 }
 
-.th-fsize {
-	font-size: 1.5em;
+.sky {
+	color: var(--header-title-color);
 }
 
-.td-pad {
-	padding: 50px;
-} */
+/* background-colors*/
 
-/* .button-box-model {
+.bgc-beige {
+	background-color: var(--border-color);
+}
+
+.bgc-pale {
+	background-color: var(--header-text-color);
+}
+
+.bgc-petrol {
+	background-color: var(--header-container-color);
+}
+
+.bgc-light-petrol {
+	background-color: var(--header-element-color);
+}
+
+.bgc-sky {
+	background-color: var(--header-title-color);
+}
+
+.headings {
+	display: inline-block;
+}
+
+.headings h1:hover,
+h2:hover,
+h3:hover,
+h4:hover,
+h5:hover,
+h6:hover {
+	transition: 0.3s;
+	background-color: var(--box-color);
+}
+
+.background-img {
+	width: 18%;
+	min-width: 18%;
 	margin: 0 auto;
-	padding: 30px 65px;
+	padding: 1.25em;
+}
+
+.box {
+	margin: 0 auto;
+	padding: 3.12em;
+	max-width: 10%;
+	background-color: var(--box-color);
+	transition: 0.2s;
+}
+
+.box:hover {
+	transition: 0.3s;
+	font-size: 1.2rem;
+	max-width: 25%;
+	background-color: var(--header-container-color);
+	color: var(--box-color);
+}
+
+.container1 {
+	display: flex;
+	padding: 3.12em;
+	background-color: var(--container-color);
+}
+
+.container2 {
+	padding: 6.25em;
+	background-color: var(--container-color);
+}
+
+.button-box-model {
+	margin: 0 auto;
+	padding: 2.2em 4.5em;
 	color: var(--text-color);
 	background-color: var(--box-color);
 	cursor: pointer;
-	border-radius: 10px;
+	border-radius: 0.62em;
 	transition: 0.3s;
-	letter-spacing: 1px;
+	max-width: 15%;
+	letter-spacing: 0.5em;
 }
 
 .button-box-model:hover {
@@ -65,129 +122,41 @@ small {
 	color: var(--border-color);
 	border-radius: 0;
 	transition: 0.3s;
-} */
-
-/* .container1 {
-	display: flex;
-	padding: 50px;
-	margin: 20px 0;
-	background-color: var(--container-color);
 }
 
-.container2 {
-	padding: 100px;
-	margin: 40px 0;
-	background-color: var(--container-color);
-} */
-
-/* .box1 {
-	margin: 0 auto;
-	padding: 50px;
-	background-color: var(--box-color);
-}
-
-.box2 {
-	margin: 0 auto;
-	padding: 50px;
-	background-color: var(--box-color);
-}
-
-.box3 {
-	margin: 0 auto;
-	padding: 50px;
-	background-color: var(--box-color);
-} */
-
-/* .text-centered {
-	text-align: center;
-} */
-/* 
-.background-img {
-	width: 300px;
-	margin: 0 auto;
-	padding: 20px;
-}
-
-.supertitle {
-	font-size: 8em;
-}
-.supertitle2 {
-	font-size: 5em;
-}
-
-.max-width160 {
-	max-width: 160px;
-}
-
-.text-left {
-	text-align: left;
-}
-
-.pad1 {
-	padding: 10px;
-}
-
-.mar1 {
-	margin: 10px;
-} */
-
-/* .container-flex {
-	display: flex;
-	justify-content: space-between;
-	background-color: var(--header-container-color);
-	text-decoration: none;
-	color: var(--header-title-color);
-	font-family: 'Poiret One', cursive;
-	letter-spacing: 1px;
-} */
-
-/* .container-flex a {
-	text-decoration: none;
-	color: var(--header-text-color);
-}
-
-.container-flex a h1 {
-	color: var(--header-title-color);
-	font-size: 40px;
-	padding: 35px 40px;
-} */
-
-/* .ul-flex {
-	display: flex;
-	list-style: none;
-}
-
-.ul-flex li {
-	padding: 10px 30px;
-	margin: 35px auto;
-	font-size: 20px;
-	color: var(--header-text-color);
-} */
-
-/* .navbar-flex {
-	color: var(--header-title-color);
-	background-color: var(--header-container-color);
-	justify-content: space-around;
-	display: flex;
+.table-box-model {
+	margin: 1.87em auto;
+	padding: 6.25em;
+	letter-spacing: 0.1em;
 	transition: 0.3s;
-	font-family: 'Poiret One', cursive;
 }
 
-.navbar-flex a {
-	text-decoration: none;
-	color: var(--header-text-color);
-}
-
-.navbar-flex a h1 {
-	text-decoration: none;
-	color: var(--header-title-color);
-	font-size: 2.5rem;
-	padding: 0.8em;
-}
-
-.navbar-flex:hover {
+.th-pad {
+	padding: 1.25em 6.25em;
 	transition: 0.3s;
-	color: white;
 }
 
- */
+.th-fsize {
+	font-size: 1.5rem;
+	letter-spacing: 0.12em;
+}
+
+.td-pad {
+	padding: 1.87em;
+	transition: 0.3s;
+}
+
+.table-box-model:hover {
+	background-color: var(--header-container-color);
+	transition: 0.3s;
+}
+
+.th-pad:hover {
+	background-color: var(--container-color);
+	transition: 0.3s;
+}
+
+.td-pad:hover {
+	background-color: var(--body-color);
+	transition: 0.3s;
+}
