--- a/styles/cv-style.css
+++ b/styles/cv-style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
 
 :root {
@@ -7,53 +8,87 @@
 	--header-title-color: #00adb5;
 }
 
-.main-container-cv {
-	font-family: 'Montserrat', sans-serif;
-	color: dimgray;
-	width: 60%;
-	margin: 0 auto;
+/* colors */
+
+.pale {
+	color: var(--header-text-color);
 }
 
-.p-cv {
-	font-size: 14px;
-	padding: 0;
+.petrol {
+	color: var(--header-container-color);
 }
 
-.h4-cv {
-	margin-left: 8px;
-	font-size: 1.1rem;
+.light-petrol {
+	color: var(--header-element-color);
 }
 
-.h5-cv {
-	font-size: 1rem;
+.sky {
+	color: var(--header-title-color);
 }
 
-.a-cv {
-	text-decoration: none;
-	color: blueviolet;
+/* background-colors*/
+
+.bgc-beige {
+	background-color: var(--border-color);
 }
-.spam-cv {
-	color: blueviolet;
+
+.bgc-pale {
+	background-color: var(--header-text-color);
 }
-.li-cv {
-	margin: 0 6px;
+
+.bgc-petrol {
+	background-color: var(--header-container-color);
 }
-/* 
+
+.bgc-light-petrol {
+	background-color: var(--header-element-color);
+}
+
+.bgc-sky {
+	background-color: var(--header-title-color);
+}
+
 .article-cv {
-	background-color: #f7f7f7;
-	padding: 10px;
-	margin: 15px 0;
-	border-radius: 10px;
+	max-width: 27%;
+	color: var(--header-text-color);
+	padding: 1em;
+	margin: 1em;
+	border-radius: 0.62em;
+	letter-spacing: 0.01em;
+	line-height: 1.5em;
+	transition: 0.3s;
 }
 
-.footer-cv {
-	text-align: center;
-	padding: 15px;
+.article-cv:hover {
+	transition: 0.3s;
+	background-color: var(--header-element-color);
+}
+
+.info-cv {
+	color: var(--header-text-color);
+	padding: 1em;
+	margin: 1em;
+	border-radius: 0.62em;
+	letter-spacing: 0.01em;
+	line-height: 1.5em;
+	transition: 0.3s;
+}
+
+.info-cv:hover {
+	transition: 0.3s;
+	background-color: var(--header-element-color);
 }
 
 .foto-perfil-cv {
-	border-radius: 10px;
-	width: 160px;
+	border-radius: 0.62em;
+	margin: 0 6.25em;
+	width: 55%;
+	transition: 0.3s;
+}
+
+.foto-perfil-cv:hover {
+	transition: 0.3s;
+	width: 65%;
 }
 
 .division {
@@ -63,10 +98,51 @@
 .info-flex {
 	display: flex;
 	justify-content: center;
+	margin: 0.62em;
+	padding: 0.62em;
 }
 
 .nav-bar-cv {
 	display: flex;
-	font-size: 12px;
+	font-size: 0.75rem;
+	padding: 0.5em 0;
 	justify-content: center;
-} */
+	transition: 0.3s;
+}
+
+.main-container-cv {
+	font-family: 'Maven Pro', sans-serif;
+	color: dimgray;
+	letter-spacing: 0.012em;
+	width: 60%;
+	margin: 0 auto;
+}
+
+.main-container-cv p {
+	font-size: 0.87rem;
+	padding: 0.31em 0;
+}
+
+.main-container-cv h4 {
+	padding: 0 1.8em;
+
+	font-size: 1.1rem;
+}
+
+.main-container-cv h5 {
+	padding: 0.31em 0;
+	font-size: 1rem;
+}
+
+.main-container-cv a {
+	text-decoration: none;
+	color: var(--header-title-color);
+	padding: 0.31em 0;
+}
+.main-container-cv spam {
+	color: var(--header-title-color);
+}
+.main-container-cv li {
+	padding: 0.3em 0;
+	margin: 0 0.37em 0;
+}
