--- a/styles/cv-style.css
+++ b/styles/cv-style.css
@@ -1,118 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
-
-:root {
-	--header-text-color: #eeeeee;
-	--header-container-color: #222831;
-	--header-element-color: #393e46;
-	--header-title-color: #00adb5;
-}
-
-/* colors */
-
-.pale {
-	color: var(--header-text-color);
-}
-
-.petrol {
-	color: var(--header-container-color);
-}
-
-.light-petrol {
-	color: var(--header-element-color);
-}
-
-.sky {
-	color: var(--header-title-color);
-}
-
-/* background-colors*/
-
-.bgc-beige {
-	background-color: var(--border-color);
-}
-
-.bgc-pale {
-	background-color: var(--header-text-color);
-}
-
-.bgc-petrol {
-	background-color: var(--header-container-color);
-}
-
-.bgc-light-petrol {
-	background-color: var(--header-element-color);
-}
-
-.bgc-sky {
-	background-color: var(--header-title-color);
-}
-
-.article-cv {
-	max-width: 27%;
-	color: var(--header-text-color);
-	padding: 1em;
-	margin: 1em;
-	border-radius: 0.62em;
-	letter-spacing: 0.01em;
-	line-height: 1.5em;
-	transition: 0.3s;
-}
-
-.article-cv:hover {
-	transition: 0.3s;
-	background-color: var(--header-element-color);
-}
-
-.info-cv {
-	color: var(--header-text-color);
-	padding: 1em;
-	margin: 1em;
-	border-radius: 0.62em;
-	letter-spacing: 0.01em;
-	line-height: 1.5em;
-	transition: 0.3s;
-}
-
-.info-cv:hover {
-	transition: 0.3s;
-	background-color: var(--header-element-color);
-}
-
-.foto-perfil-cv {
-	border-radius: 0.62em;
-	margin: 0 6.25em;
-	width: 55%;
-	transition: 0.3s;
-}
-
-.foto-perfil-cv:hover {
-	transition: 0.3s;
-	width: 65%;
-}
-
-.division {
-	border: dimgray solid;
-}
-
-.info-flex {
-	display: flex;
-	justify-content: center;
-	margin: 0.62em;
-	padding: 0.62em;
-}
-
-.nav-bar-cv {
-	display: flex;
-	font-size: 0.75rem;
-	padding: 0.5em 0;
-	justify-content: center;
-	transition: 0.3s;
-}
-
 .main-container-cv {
 	font-family: 'Maven Pro', sans-serif;
-	color: dimgray;
+	color: var(--color-hover-btn);
 	letter-spacing: 0.012em;
 	width: 60%;
 	margin: 0 auto;
@@ -145,4 +33,69 @@
 .main-container-cv li {
 	padding: 0.3em 0;
 	margin: 0 0.37em 0;
+}
+
+.article-cv {
+	max-width: 27%;
+	color: var(--header-text-color);
+	background-color: var(--header-darker-color);
+	padding: 1em;
+	margin: 1em;
+	border-radius: 0.62em;
+	letter-spacing: 0.01em;
+	line-height: 1.5em;
+	transition: 0.3s;
+}
+
+.article-cv:hover {
+	transition: 0.3s;
+	background-color: var(--header-darker-hover-color);
+}
+
+.info-cv {
+	color: var(--header-text-color);
+	background-color: var(--header-darker-color);
+
+	padding: 1em;
+	margin: 1em;
+	border-radius: 0.62em;
+	letter-spacing: 0.01em;
+	line-height: 1.5em;
+	transition: 0.3s;
+}
+
+.info-cv:hover {
+	transition: 0.3s;
+	background-color: var(--header-darker-hover-color);
+}
+
+.foto-perfil-cv {
+	border-radius: 0.62em;
+	margin: 0 6.25em;
+	width: 55%;
+	transition: 0.3s;
+}
+
+.foto-perfil-cv:hover {
+	transition: 0.3s;
+	width: 65%;
+}
+
+.division {
+	border: dimgray solid;
+}
+
+.info-flex {
+	display: flex;
+	justify-content: center;
+	margin: 0.62em;
+	padding: 0.62em;
+}
+
+.nav-bar-cv {
+	display: flex;
+	font-size: 0.75rem;
+	padding: 0.5em 0;
+	justify-content: center;
+	transition: 0.3s;
 }
