--- a/styles/notes-style.css
+++ b/styles/notes-style.css
@@ -1,20 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
-
-:root {
-	--header-text-color: #eeeeee;
-	--header-container-color: #222831;
-	--header-element-color: #393e46;
-	--header-title-color: #00adb5;
-	--text-color: rgb(236, 236, 236);
-	--body-color: #5026a7;
-	--container-color: #8d448b;
-	--box-color: #cc6a87;
-	--border-color: #eccd8f;
-}
-
 code {
 	background-color: var(--body-color);
 	display: block;
@@ -25,46 +8,6 @@ code {
 .main-container {
 	font-family: 'Poiret One', cursive;
 	color: var(--header-text-color);
-}
-
-/* colors */
-
-.pale {
-	color: var(--header-text-color);
-}
-
-.petrol {
-	color: var(--header-container-color);
-}
-
-.light-petrol {
-	color: var(--header-element-color);
-}
-
-.sky {
-	color: var(--header-title-color);
-}
-
-/* background-colors*/
-
-.bgc-beige {
-	background-color: var(--border-color);
-}
-
-.bgc-pale {
-	background-color: var(--header-text-color);
-}
-
-.bgc-petrol {
-	background-color: var(--header-container-color);
-}
-
-.bgc-light-petrol {
-	background-color: var(--header-element-color);
-}
-
-.bgc-sky {
-	background-color: var(--header-title-color);
 }
 
 .container-flex-notes {
@@ -78,9 +21,9 @@ code {
 }
 
 .container-notes {
+	background-color: var(--header-darker-color);
 	border-radius: 1em;
-	flex: 1 0 18%;
-	max-width: 18%;
+	flex: 1 1 18%;
 	overflow: hidden;
 	font-size: 0.9rem;
 	text-align: left;
@@ -108,5 +51,5 @@ code {
 
 .container-notes:hover {
 	transition: 0.3s;
-	background-color: var(--header-element-color);
+	background-color: var(--header-darker-hover-color);
 }
