--- a/styles/tech-news-style.css
+++ b/styles/tech-news-style.css
@@ -1,13 +1,5 @@
 :root {
 	font: 16px/1.5 'Oswald', sans-serif;
-
-	--color-hover-btn: rgba(255, 255, 255, 0.4);
-}
-
-* {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
 }
 
 button {
@@ -22,11 +14,6 @@ body {
 
 a {
 	color: #fff;
-	text-decoration: none;
-}
-
-ul {
-	list-style: none;
 }
 
 #menu {
@@ -37,11 +24,6 @@ ul {
 	left: 0;
 	background-color: rgba(77, 77, 77, 0.7);
 	width: 100%;
-}
-
-.container {
-	width: 90%;
-	margin: auto;
 }
 
 /* Navigation */
@@ -89,22 +71,21 @@ ul {
 
 /* Showcase */
 
-.showcase-img {
-	width: 100%;
-	height: 33em;
-	object-fit: cover;
-}
-
 .showcase {
 	text-align: center;
-	background: url(images/showcase2.jpg) center/cover fixed no-repeat;
+	background: url(../images/showcase2.jpg) center/cover fixed no-repeat;
 	align-items: center;
 	justify-content: flex-end;
-	padding: 1em;
 	width: 100%;
 	height: 33em;
 	display: flex;
 	flex-flow: column nowrap;
+}
+
+.showcase-img {
+	width: 100%;
+	height: 33em;
+	object-fit: cover;
 }
 
 .showcase .btn {
@@ -176,7 +157,7 @@ ul {
 	padding: 5em 0;
 	display: flex;
 	flex-flow: column nowrap;
-	background: url(images/tech-red.jpg);
+	background: url(../images/tech-red.jpg) fixed;
 	margin-bottom: 1em;
 	justify-content: center;
 }
@@ -209,7 +190,7 @@ ul {
 	padding: 5em 0;
 	display: flex;
 	flex-flow: column nowrap;
-	background: url(images/image-five.jpg) center left -5%;
+	background: url(../images/image-five.jpg) fixed center left -5%;
 	margin-bottom: 1em;
 	justify-content: center;
 }
@@ -259,7 +240,7 @@ ul {
 
 /* footer */
 
-footer {
+.footer-tech {
 	background: rgb(37, 37, 37);
 	color: #616161;
 	font-size: 0.8rem;
@@ -267,7 +248,7 @@ footer {
 	text-align: center;
 }
 
-.copyright {
+.copyright-tech {
 	padding-bottom: 2.5em;
 	display: block;
 	letter-spacing: 0.1em;
