--- a/styles/main.css
+++ b/styles/main.css
@@ -53,6 +53,10 @@ ul {
 	color: var(--header-title-color);
 }
 
+.darker {
+	color: var(--header-darker-hover-color);
+}
+
 /* background-colors*/
 
 .bgc-beige {
